@@ -46,6 +46,7 @@
 (Graham Triggs)
 - SF Patch #1688523 Bug fix - OAI harvest and Oracle
 - SF Patch #1660752 Workaround Numeric/Integer handling in Oracle
+- SF Patch #1665400 Oracle schema changes for CLOB columns
 
 1.4.1 final
 ===========
